# Vox

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Config.json  README.md  imgui.ini  listsrc.py  sources.cmake  vcpkg-configuration.json  vcpkg.json
assets/models/: animatedCube.glb  gizmoArrow.glb  mushroom.glb  scorpion.glb  witch.glb
assets/prefabs/: test.json  test2.json
assets/shaders/: debugLine.vert  debugTriangle.frag  deferred.frag  forwardMaterial.frag  forwardMaterial.vert  gBuffer.frag  gBuffer.vert  gBufferVoxel.frag  gBufferVoxel.vert  outlineDistance.frag  outlineFill.frag  pickBuffer.frag  pickBuffer.vert  skeletalMesh.comp  skeletalMesh.vert  sky.frag  sky.vert  stencil.frag  stencil.vert  voxelGeneration.comp
assets/shaders/outline/: outlineFill.frag  outlineJump.frag
assets/voxels/: World.vox  test.vox
assets/worlds/: MainWorld  MainWorld.vox  MainWorld.world  imgui.ini  testWorld.world
src/: Vox.cpp  Vox.h  Voxels.cpp  Voxels.h  sources.cmake
src/character/: Character.cpp  Character.h
src/components/: MeshComponent.cpp  MeshComponent.h  SceneComponent.cpp  SceneComponent.h
src/core/concepts/: Concepts.h
src/core/config/: Config.cpp  Config.h
src/core/datatypes/: AssetPtr.cpp  AssetPtr.h  Delegate.h  DelegateHandle.h  DynamicObjectContainer.h  DynamicRef.h  FilePath.cpp  FilePath.h  ObjectContainer.h  Ref.h  Transform.cpp  Transform.h  WeakRef.h
src/core/logging/: Logging.cpp  Logging.h
src/core/math/: Comparators.cpp  Comparators.h  Formatting.cpp  Formatting.h  Math.cpp  Math.h  Strings.cpp  Strings.h
src/core/objects/: Object.cpp  Object.h  ObjectClass.cpp  ObjectClass.h  ObjectInitializer.cpp  ObjectInitializer.h  Prefab.cpp  Prefab.h  Property.cpp  Property.h  PropertyOverride.cpp  PropertyOverride.h  SavedWorld.cpp  SavedWorld.h  TestObject.cpp  TestObject.h  TestObjectChild.cpp  TestObjectChild.h  Tickable.cpp  Tickable.h  World.cpp  World.h
src/core/objects/actor/: Actor.cpp  Actor.h  TestActor.cpp  TestActor.h
src/core/objects/component/: Component.cpp  Component.h  TestComponent.cpp  TestComponent.h
src/core/objects/interfaces/: Tickable.cpp
src/core/objects/prefabs/: Prefab.cpp  Prefab.h  PropertyOverride.cpp  PropertyOverride.h
src/core/objects/properties/: AssetPtr.cpp  AssetPtr.h  Property.cpp  Property.h
src/core/objects/world/: SavedWorld.cpp  SavedWorld.h  TickManager.cpp  World.h  (+2 more)
src/core/services/: EditorService.cpp  EditorService.h  FileIOService.cpp  FileIOService.h  InputService.cpp  InputService.h  ObjectService.cpp  ObjectService.h  ServiceLocator.cpp  ServiceLocator.h
src/editor/: AssetDisplayWindow.cpp  AssetDisplayWindow.h  ClassList.cpp  ClassList.h  Console.cpp  Console.h  Editor.cpp  Editor.h  EditorViewport.cpp  EditorViewport.h  PlayButton.cpp  PlayButton.h  VoxelEditorPanel.cpp  VoxelEditorPanel.h  WorldOutline.cpp  WorldOutline.h
src/editor/actor_editor/: ActorEditor.cpp  ActorEditor.h
src/editor/detail_panel/: AssetPtrDetailPanel.cpp  AssetPtrDetailPanel.h  DetailPanel.cpp  DetailPanel.h  TransformDetailPanel.cpp  TransformDetailPanel.h  Vec3DetailPanel.cpp  Vec3DetailPanel.h
src/game_objects/actors/: Actor.h  TestActor.cpp  TestActor.h
src/game_objects/components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  MeshComponent.cpp  MeshComponent.h  SceneComponent.cpp  SceneComponent.h  SkeletalMeshComponent.cpp  SkeletalMeshComponent.h  TestComponent.cpp  TestComponent.h
src/input/: InputEvent.h
src/physics/: BroadPhaseLayer.cpp  BroadPhaseLayer.h  CharacterController.cpp  CharacterController.h  ContactListener.cpp  ContactListener.h  ObjectBroadPhaseLayerFilter.cpp  ObjectBroadPhaseLayerFilter.h  ObjectLayerTypes.h  ObjectPairLayerFilter.cpp  ObjectPairLayerFilter.h  PhysicsFrame.h  PhysicsServer.cpp  PhysicsServer.h  RayCastResultNormal.cpp  RayCastResultNormal.h  SpringArm.cpp  SpringArm.h  TypeConversions.cpp  TypeConversions.h  VoxelBody.cpp  VoxelBody.h  VoxelChunkBody.h
src/rendering/: ArrayTexture.cpp  ArrayTexture.h  Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  Framebuffer.cpp  Framebuffer.h  FullscreenQuad.cpp  FullscreenQuad.h  GBuffer.cpp  GBuffer.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PBRMaterial.h  PickContainer.cpp  PickContainer.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  SimpleFramebuffer.cpp  SimpleFramebuffer.h  Texture.cpp  Texture.h  VoxelChunkMesh.cpp  VoxelChunkMesh.h  VoxelMesh.cpp  VoxelMesh.h  WorldRenderer.cpp  WorldRenderer.h
src/rendering/buffers/: ArrayTexture.cpp  ArrayTexture.h  Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBuffer.h  PickBuffer.cpp  PickBuffer.h  RenderTexture.cpp  RenderTexture.h  Texture.cpp  Texture.h
src/rendering/camera/: Camera.cpp  Camera.h  FlyCamera.cpp  FlyCamera.h
src/rendering/gizmos/: Gizmo.cpp  Gizmo.h
src/rendering/mesh/: AnimationSampler.cpp  AnimationSampler.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  MeshInstance.h  MeshInstanceContainer.cpp  MeshInstanceContainer.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h  Primitive.cpp  Primitive.h  SkeletalModel.cpp  SkeletalModel.h  SkeletalPrimitive.h  VoxelMesh.cpp  VoxelMesh.h
src/rendering/shaders/: ComputeShader.cpp  ComputeShader.h  DeferredShader.cpp  DeferredShader.h  PixelShader.cpp  PixelShader.h  Shader.cpp  Shader.h  VoxelShader.cpp  VoxelShader.h
src/rendering/skeletal_mesh/: Animation.cpp  Animation.h  AnimationChannel.cpp  SkeletalMeshInstance.cpp  SkeletalMeshInstance.h  SkeletalMeshInstanceContainer.cpp  SkeletalMeshInstanceContainer.h  SkeletalModel.cpp  SkeletalModel.h
src/rendering/skeletalmesh/: Animation.cpp  Animation.h  AnimationChannel.cpp  AnimationChannel.h  AnimationSampler.h  SkeletalModel.cpp  SkeletalModel.h
src/voxel/: CollisionOctree.cpp  CollisionOctree.h  Octree.cpp  Octree.h  TypedOctree.cpp  TypedOctree.h  Vector.cpp  Vector.h  Voxel.cpp  Voxel.h  VoxelChunk.cpp  VoxelChunk.h  VoxelGrid.cpp  VoxelGrid.h  VoxelMaterial.cpp  VoxelMaterial.h  VoxelWorld.cpp  VoxelWorld.h
(+65 files in other folders)
